--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/alata": "^0.2.3",
     "@expo-google-fonts/lora": "^0.2.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
