--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "styled-components": "^6.0.2"
+    "styled-components": "^6.0.2",
+    "expo-linear-gradient": "~12.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
