--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-paper": "^5.9.1",
     "styled-components": "^6.0.2"
   },
   "devDependencies": {
