--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,13 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-package-lock.json
 
 # macOS
 .DS_Store
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Package lock file
+yarn.lock
+package-lock.json
