--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "dependencies": {
     "@expo-google-fonts/alata": "^0.2.3",
     "@expo-google-fonts/lora": "^0.2.3",
+    "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-inset-shadow": "^1.0.3",
     "react-native-paper": "^5.9.1",
-    "styled-components": "^6.0.2",
-    "expo-linear-gradient": "~12.1.2",
     "react-native-web": "~0.18.10",
-    "@expo/webpack-config": "^18.0.1"
+    "styled-components": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
