--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
-    "firebase": "^9.6.11",
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.6.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-paper": "^5.9.1",
+    "react-native-safe-area-context": "^4.7.1",
     "react-native-web": "~0.18.10",
     "styled-components": "^6.0.2"
   },
