--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-web": "~0.18.10",
-    "styled-components": "^6.0.2"
+    "styled-components": "^6.0.2",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
