--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-inset-shadow": "^1.0.3",
     "react-native-mark-slider": "^1.0.1",
     "react-native-paper": "^5.9.1",
-    "react-native-safe-area-context": "^4.7.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-web": "~0.18.10",
     "styled-components": "^6.0.2",
     "react-native-svg": "13.4.0"
