--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
@@ -29,9 +30,9 @@
     "react-native-mark-slider": "^1.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "styled-components": "^6.0.2",
-    "react-native-svg": "13.4.0"
+    "styled-components": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
