--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-inset-shadow": "^1.0.3",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-svg": "^13.10.0",
     "react-native-web": "~0.18.10",
     "styled-components": "^6.0.2"
   },
