feat: update homepage

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.6.11",
+    "link": "^1.5.1",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "^0.71.8",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-mark-slider": "^1.0.1",
     "react-native-paper": "^5.9.1",
