--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "link": "^1.5.1",
     "react": "18.2.0",
     "react-native": "^0.71.8",
+    "react-native-elevation": "^1.0.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-mark-slider": "^1.0.1",
     "react-native-paper": "^5.9.1",
