--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-inset-shadow": "^1.0.3",
     "react-native-mark-slider": "^1.0.1",
     "react-native-paper": "^5.9.1",
+    "react-native-radio-buttons-group": "^3.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
