--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-native": "^0.71.8",
     "react-native-inset-shadow": "^1.0.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mark-slider": "^1.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-radio-buttons-group": "^3.0.2",
